--- a/Client/Views/ChatUC.xaml
+++ b/Client/Views/ChatUC.xaml
@@ -6,13 +6,13 @@
              xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              xmlns:utility="clr-namespace:Client.Utility"
              xmlns:models="clr-namespace:Client.Models"
-             xmlns:icons="http://metro.mahapps.com/winfx/xaml/iconpacks"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800" >
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/WindowResources/MessageDictionary.xaml"/>
+                <ResourceDictionary Source="/WindowResources/ThemeDictionary.xaml"/>
             </ResourceDictionary.MergedDictionaries>
 
             <utility:TypeConverter x:Key="TypeConverter"/>
@@ -34,6 +34,11 @@
                         <Setter Property="Visibility" Value="Collapsed"/>
                     </DataTrigger>
                 </Style.Triggers>
+            </Style>
+
+            <Style x:Key="ButtonStyle" BasedOn="{StaticResource MahApps.Styles.Button}" TargetType="Button" >
+                <Setter Property="Background" Value="{StaticResource ButtonBackground}"/>
+                <Setter Property="Foreground" Value="FloralWhite"/>
             </Style>
         </ResourceDictionary>
     </UserControl.Resources>
@@ -58,11 +63,11 @@
             <RowDefinition Height="*" MaxHeight="150"/>
         </Grid.RowDefinitions>
 
-        <DockPanel Background="Yellow" LastChildFill="False">
+        <DockPanel LastChildFill="False" Background="{StaticResource MainBackground2}">
             <Image  DockPanel.Dock="Right" Style="{StaticResource AvatarImageStyle}"/>
-            <Button IsEnabled="{Binding Path=Chat.CanWrite}" DockPanel.Dock="Right" Content="Edit chat" Margin="5" Command="{Binding EditChatCommand}">
+            <Button IsEnabled="{Binding Path=Chat.CanWrite}" DockPanel.Dock="Right" Content="Edit chat" Margin="5" Background="{StaticResource ButtonBackground}" Command="{Binding EditChatCommand}">
                 <Button.Style>
-                    <Style BasedOn="{StaticResource MahApps.Styles.Button}" TargetType="Button">
+                    <Style BasedOn="{StaticResource ButtonStyle}" TargetType="Button">
                         <Style.Triggers>
                             <DataTrigger Binding="{Binding Path=Chat, Converter={StaticResource TypeConverter}}" Value="{x:Type models:ChatOne}">
                                 <Setter Property="Visibility" Value="Collapsed"/>
@@ -71,7 +76,7 @@
                     </Style>
                 </Button.Style>
             </Button>
-            <Button DockPanel.Dock="Right" Content="Leave" Margin="5" Command="{Binding LeaveChatCommand}"/>
+            <Button DockPanel.Dock="Right" Content="Leave" Margin="5" Style="{StaticResource ButtonStyle}" Command="{Binding LeaveChatCommand}"/>
         </DockPanel>
 
         <Image Grid.Row="1" VerticalAlignment="Top" Margin="0,10,0,0" Source="/Resources/loader.png" Visibility="{Binding Path=LoaderVisibility}" Width="50" Height="50" Panel.ZIndex="1">
@@ -132,16 +137,16 @@
                 </TextBox.InputBindings>
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="KeyDown">
-                        <i:InvokeCommandAction Command="{Binding TextBox_KeyDownCommand}"></i:InvokeCommandAction>
+                        <i:InvokeCommandAction Command="{Binding TextBox_KeyDownCommand}"/>
                     </i:EventTrigger>
                     <i:EventTrigger EventName="KeyUp">
-                        <i:InvokeCommandAction Command="{Binding TextBox_KeyUpCommand}"></i:InvokeCommandAction>
+                        <i:InvokeCommandAction Command="{Binding TextBox_KeyUpCommand}"/>
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
             </TextBox>
 
-            <Button Grid.Column="1" Content="File" FontSize="20" Command="{Binding OpenFileCommand}"></Button>
-            <Button IsEnabled="{Binding Path=Chat.CanWrite}" Grid.Column="3" Content="Send" FontSize="20" Command="{Binding SendCommand}"></Button>
+            <Button Grid.Column="1" Content="File" FontSize="20" Background="{StaticResource ButtonBackground}" Command="{Binding OpenFileCommand}"/>
+            <Button IsEnabled="{Binding Path=Chat.CanWrite}" Grid.Column="3" Content="Send" FontSize="20" Background="{StaticResource ButtonBackground}" Command="{Binding SendCommand}"/>
         </Grid>
     </Grid>
 
