--- a/Client/Views/EditGroupWindow.xaml
+++ b/Client/Views/EditGroupWindow.xaml
@@ -11,6 +11,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/WindowResources/ChatsDictionary.xaml"/>
+                <ResourceDictionary Source="/WindowResources/ThemeDictionary.xaml"/>
             </ResourceDictionary.MergedDictionaries>
 
             <DataTemplate x:Key="MembersDataTemplate">
@@ -44,11 +45,15 @@
                 </Ellipse>
             </ControlTemplate>
 
+            <Style x:Key="ButtonStyle" TargetType="Button" BasedOn="{StaticResource MahApps.Styles.Button}">
+                <Setter Property="Background" Value="{StaticResource ButtonBackground}"/>
+                <Setter Property="Foreground" Value="FloralWhite"/>
+            </Style>
         </ResourceDictionary>
 
     </Window.Resources>
 
-    <Grid>
+    <Grid Background="{StaticResource MainBackground}">
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition Height="4*"/>
@@ -59,7 +64,7 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
-        <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Path=Chat.GroupName}"/>
+        <TextBox Grid.Row="0" Grid.Column="1" FontSize="20" Height="30" Margin="20,0" Text="{Binding Path=Chat.GroupName}"/>
 
         <Button Width="50" Height="50" 
                 Cursor="Hand"
@@ -98,8 +103,18 @@
                   ItemTemplate="{StaticResource ChatDataTemplate}">            
         </ListView>
 
-        <!--<Button Grid.Row="2" Grid.Column="0" Content="Add member" Width="200" Height="30" Command="{Binding Path=AddMemberCommand}"/>-->
-        <Button Grid.Row="2" Grid.Column="0" Content="Delete chat" Width="200" Height="30" Command="{Binding DeleteChatCommand}"/>
-        <Button Grid.Row="2" Grid.Column="1" Content="Show more" Width="200" Height="30" Command="{Binding ShowMoreCommand}"/>
+        <Button Grid.Row="2" Grid.Column="0"
+                Content="Delete chat"
+                Width="200" Height="30"
+                Command="{Binding DeleteChatCommand}"
+                Style="{StaticResource ButtonStyle}">
+        </Button>
+
+        <Button Grid.Row="2" Grid.Column="1"
+                Content="Show more"
+                Width="200" Height="30"
+                Command="{Binding ShowMoreCommand}"
+                Style="{StaticResource ButtonStyle}">
+        </Button>
     </Grid>
 </Window>
