--- a/Client/Views/SettingsUC.xaml
+++ b/Client/Views/SettingsUC.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Client.Views.UCSettings"
+﻿<UserControl x:Class="Client.Views.SettingsUC"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -11,31 +11,24 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/WindowResources/SlideRadioButton.xaml"/>
                 <ResourceDictionary Source="/WindowResources/SliderCheckBox.xaml"/>
+                <ResourceDictionary Source="/WindowResources/SettingsResources.xaml"/>
             </ResourceDictionary.MergedDictionaries>
-
-            <Style x:Key="HeaderStyle" TargetType="TextBlock">
-                <Setter Property="VerticalAlignment" Value="Center"/>
-                <Setter Property="HorizontalAlignment" Value="Center"/>
-                <Setter Property="FontSize" Value="30"/>
-                <Setter Property="Foreground" Value="DarkSlateBlue"/>
-                <Setter Property="FontWeight" Value="Bold"/>
-            </Style>
         </ResourceDictionary>
     </UserControl.Resources>
 
-    <Border Background="Green">
+    <Border Background="{StaticResource MainBackground}">
         <Grid Margin="30">
             <Grid.RowDefinitions>
-                <RowDefinition Height="30"/>
+                <RowDefinition Height="40"/>
                 <RowDefinition/>
-                <RowDefinition Height="30"/>
+                <RowDefinition Height="40"/>
                 <RowDefinition/>
-                <RowDefinition Height="30"/>
+                <RowDefinition Height="40"/>
                 <RowDefinition/>
-                <!--<RowDefinition Height="30"/>
+                <RowDefinition Height="40"/>
                 <RowDefinition/>
-                <RowDefinition Height="30"/>
-                <RowDefinition/>-->
+                <RowDefinition Height="40"/>
+                <RowDefinition/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
@@ -50,23 +43,13 @@
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
 
-                <StackPanel Grid.Column="0" VerticalAlignment="Center">
-                    <TextBlock Text="User name:"/>
-                    <TextBlock Text="{Binding Path=Client.UserName}" />
-                </StackPanel>
-                <!--<StackPanel Grid.Column="1" VerticalAlignment="Center">
-                    <TextBlock Text="User description:"/>
-                    <TextBox Text="{Binding Path=Client.UserDesc}" />
-                </StackPanel>-->
-                <StackPanel Grid.Column="2" VerticalAlignment="Center">
-                    <TextBlock Text="User avatar:"/>
-                    <Ellipse Width="50" Height="50" StrokeThickness="3" Stroke="Black">
-                        <Ellipse.Fill>
-                            <ImageBrush ImageSource="{Binding Path=Client.UserImage}"/>
-                        </Ellipse.Fill>
-                    </Ellipse>
-                    <!--<Button Content="Change" Command="{Binding ChangeAvatarCommand}"/>-->
-                </StackPanel>
+                <TextBox Grid.Column="0" Text="{Binding Path=Client.UserName}" Style="{StaticResource TextBoxStyle}"/>
+                <TextBox Grid.Column="1" Text="{Binding Path=Client.UserDesc}" Style="{StaticResource TextBoxStyle}"/>
+                <Ellipse Grid.Column="2" Width="50" Height="50" StrokeThickness="3" Stroke="Black" VerticalAlignment="Center">
+                    <Ellipse.Fill>
+                        <ImageBrush ImageSource="{Binding Path=Client.UserImage}"/>
+                    </Ellipse.Fill>
+                </Ellipse>
             </Grid>
 
             <TextBlock Grid.Row="2" Text="Choose message download step" Style="{StaticResource HeaderStyle}"/>
@@ -87,9 +70,9 @@
                     <RadioButton Grid.Row="0" Grid.Column="1" IsChecked="{Binding Path=LoadCount2IsChecked}" Template="{StaticResource SlideRadioButtonTemplate}" Command="{Binding MessageLoadCountChangedCommand}" CommandParameter="{Binding ElementName=messageLoadCount2, Path=Text}"/>
                     <RadioButton Grid.Row="0" Grid.Column="2" IsChecked="{Binding Path=LoadCount3IsChecked}" Template="{StaticResource SlideRadioButtonTemplate}" Command="{Binding MessageLoadCountChangedCommand}" CommandParameter="{Binding ElementName=messageLoadCount3, Path=Text}"/>
 
-                    <TextBlock x:Name="messageLoadCount1" Grid.Row="1" Grid.Column="0" Text="30"/>
-                    <TextBlock x:Name="messageLoadCount2" Grid.Row="1" Grid.Column="1" Text="50"/>
-                    <TextBlock x:Name="messageLoadCount3" Grid.Row="1" Grid.Column="2" Text="100"/>
+                    <TextBlock x:Name="messageLoadCount1" Grid.Row="1" Grid.Column="0" Margin="20,0,0,0" Text="30" Style="{StaticResource TextStyle}"/>
+                    <TextBlock x:Name="messageLoadCount2" Grid.Row="1" Grid.Column="1" Margin="20,0,0,0" Text="50" Style="{StaticResource TextStyle}"/>
+                    <TextBlock x:Name="messageLoadCount3" Grid.Row="1" Grid.Column="2" Margin="20,0,0,0" Text="100" Style="{StaticResource TextStyle}"/>
                 </Grid>
             </GroupBox>
 
@@ -101,11 +84,11 @@
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
 
-                <Button Grid.Column="0" Content="Default wallpapers" Command="{Binding DefaultWallpaperShowCommand}"/>
-                <Button Grid.Column="1" Content="Select from device" Command="{Binding DeviceWallpaperShowCommand}"/>
+                <Button Grid.Column="0" Content="Default wallpapers" Command="{Binding DefaultWallpaperShowCommand}" Style="{StaticResource ButtonStyle}"/>
+                <Button Grid.Column="1" Content="Select from device" Command="{Binding DeviceWallpaperShowCommand}" Style="{StaticResource ButtonStyle}"/>
             </Grid>
 
-            <!--<TextBlock Grid.Row="6" Text="Notify rington" Style="{StaticResource HeaderStyle}"/>
+            <TextBlock Grid.Row="6" Text="Notify rington" Style="{StaticResource HeaderStyle}"/>
 
             <Grid Grid.Row="7">
                 <Grid.ColumnDefinitions>
@@ -118,21 +101,23 @@
                     <RowDefinition Height="1.5*"/>
                 </Grid.RowDefinitions>
 
-                <TextBlock Grid.Row="0" Grid.Column="0" Text="Notify?"/>
-                <CheckBox Grid.Row="1" Grid.Column="0" Template="{StaticResource SliderCheckBoxTemplate}"/>
-                <TextBlock Grid.Row="1" Grid.Column="0" HorizontalAlignment="Right" Margin="0,0,20,0" Text="{Binding Path=Settings.SelectedRington.Name, StringFormat={}Selected rington: {0}}"/>
+                <TextBlock Grid.Row="0" Grid.Column="0" Text="Notify?" Style="{StaticResource TextStyle}"/>
+                <StackPanel Grid.Row="1" Orientation="Horizontal">
+                    <CheckBox Grid.Row="1" Grid.Column="0" Template="{StaticResource SliderCheckBoxTemplate}"/>
+                    <TextBlock Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,20,0" Text="{Binding Path=Settings.SelectedRington.Name, StringFormat={}Selected rington: {0}}" Style="{StaticResource TextStyle}"/>
+                </StackPanel>
 
-                <TextBlock Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Center" Text="Choose notify rington" />
-                <Button Grid.Column="1" Grid.Row="1" Content="Default ringtons" Command="{Binding DefaultRingtonShowCommand}"/>
+                <TextBlock Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="Choose notify rington" Style="{StaticResource TextStyle}"/>
+                <Button Grid.Column="1" Grid.Row="1" Content="Default ringtons" Style="{StaticResource ButtonStyle}" Command="{Binding DefaultRingtonShowCommand}"/>
 
-                <Button Grid.Column="2" Grid.Row="1" Content="Select from device" Command="{Binding DeviceRingtonShowCommand}"/>
+                <Button Grid.Column="2" Grid.Row="1" Content="Select from device" Style="{StaticResource ButtonStyle}" Command="{Binding DeviceRingtonShowCommand}"/>
             </Grid>
 
             <TextBlock Grid.Row="8" Text="About" Style="{StaticResource HeaderStyle}"/>
 
             <Grid Grid.Row="9">
 
-            </Grid>-->
+            </Grid>
 
             <icons:PackIconFontAwesome Width="48"
                                        Height="48"
